# Operating_Systems

CP/: CP.odt  a.out  main.cpp  test_one.yaml  test_two.yaml
lab1/: child1  child1.c  child2  child2.c  lab1.odt  lib.h  makefile  parent  parent.c  tests.txt
lab2/: a.out  lab2.odt  main  main.c
lab3/: Makefile  child1  child1.c  child2  child2.c  lab3.odt  lib.h  parent  parent.c
lab4/: dynamic  dynamic.c  first_lib.c  lab4.odt  lib.h  makefile  second_lib.c  static.c  static_first  static_second
lab5-7/: CMakeLists.txt  Makefile  child  child.cpp  lab5-7.odt  main  parent.cpp
lab8/: lab8.odt
